# Smart_Calendar

./: .gitignore  readme.md
CalendarServer/: API.md  CMakeLists.txt  README.md
CalendarServer/docker/: docker-compose.yml
CalendarServer/docker/pgbouncer/: pgbouncer.ini
CalendarServer/migrations/: 001_init.sql  002_calendars.sql  003_events_tasks.sql  004_recurrence.sql  005_backfill_occurrences.sql  006_overrides_exdates.sql  007_outbox_jobs.sql
CalendarServer/scripts/: build.sh  cache_check.sh  migrate.sh  rbac_acceptance.sh  run.sh  run_tests.sh
CalendarServer/src/: main.cpp
CalendarServer/src/auth/: Jwt.cpp  Jwt.h  Password.cpp  Password.h
CalendarServer/src/cache/: CacheKeys.cpp  CacheKeys.h  RedisClient.cpp  RedisClient.h  Resp.cpp  Resp.h
CalendarServer/src/config/: Config.cpp  Config.h
CalendarServer/src/db/: DbPool.cpp  DbPool.h
CalendarServer/src/net/: HttpServer.cpp  HttpServer.h  MiniJson.cpp  MiniJson.h  Request.h  Response.h  Router.cpp  Router.h
CalendarServer/src/observability/: Logging.cpp  Logging.h  Metrics.cpp  Metrics.h
CalendarServer/src/recurrence/: Materializer.cpp  Materializer.h  OutboxWorker.cpp  OutboxWorker.h
CalendarServer/tests/: auth_unit.cpp  cache_keys_unit.cpp  config_unit.cpp  db_smoke.cpp  dbpool_unit.cpp  dbpool_unit_basic.cpp  dbpool_unit_cmdtuples.cpp  dbpool_unit_errors.cpp  dbpool_unit_nulls.cpp  dbpool_unit_stress.cpp  exdates_unit.cpp  fake_libpq.cpp  http_smoke.cpp  http_test_util.h  json_parse_strings.cpp  json_parse_unit.cpp  logging_unit.cpp  members_remove_http_smoke.cpp  metrics_unit.cpp  minijson_unit.cpp  overrides_unit.cpp  rbac_http_smoke.cpp  recurrence_unit.cpp  redis_client_unit.cpp  router_unit.cpp  scenario_personal_calendar.cpp  scenario_recurrence_exdates_overrides.cpp  scenario_sharing_rbac.cpp  test_util.h
CalendarServer/tests/include/: fake_libpq.h  libpq-fe.h
